# django-docs-app

./: README.MD  main.py  manage.py  mypy.ini  pyproject.toml  pyrightconfig.json
applucas/: asgi.py  settings.py  urls.py  wsgi.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: detail.html  index.html  top-choice.html
