[project]
name = "django-docs-app"
version = "0.1.0"
description = "A project to learn Django using the docs as resource."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "django-debug-toolbar>=6.0.0",
    "isort>=6.0.1",
    "pylint-django>=2.6.1",
]

# Dev tooling configs
[tool.pylint.main]
ignore-patterns = ["^\\.#"]
load-plugins = ["pylint_django"]

[tool.pylint.basic]
no-docstring-rgx = "^_"

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "missing-docstring",
    "no-member",
]

[tool.pylint.variables]
ignored-argument-names = "_.*|^ignored_|^unused_"

[tool.pylint.django]
django-settings-module = "applucas.settings"
